# xllm

./: CMakeLists.txt  setup.py
xllm/: CMakeLists.txt
xllm/core/common/: CMakeLists.txt  device_memory.cpp
xllm/core/distributed_runtime/: collective_service.cpp  llm_engine.cpp  worker_server.cpp  worker_server.h
xllm/core/framework/: CMakeLists.txt  dit_model_context.cpp  dit_model_context.h  parallel_state.cpp  parallel_state.h
xllm/core/framework/batch/: batch_input_builder.cpp  batch_input_builder.h  batch_test.cpp
xllm/core/framework/block/: CMakeLists.txt
xllm/core/framework/eplb/: CMakeLists.txt
xllm/core/framework/model/: causal_lm.h  model_input_params.h
xllm/core/framework/parallel_state/: collective_communicator.cpp
xllm/core/framework/prefix_cache/: CMakeLists.txt
xllm/core/framework/request/: sequence.cpp
xllm/core/framework/state_dict/: utils.cpp
xllm/core/framework/xtensor/: phy_page_pool.cpp
xllm/core/kernels/: ops_api.cpp
xllm/core/kernels/ilu/: CMakeLists.txt  activation.cpp  attention.cpp  fused_qknorm_rope.cu  fused_qknorm_rope_test.cpp  ilu_ops_api.h  ixformer.h  matmul.cpp  norm.cpp  rope.cpp  type_convert.cuh  utils.h
xllm/core/layers/: CMakeLists.txt  lm_head.h  pos_embedding.h  rms_norm.h  word_embedding.h
xllm/core/layers/common/: indexer.h  qwen2_attention.cpp  qwen2_attention.h  rotary_embedding.h  word_embedding_impl.h
xllm/core/layers/ilu/: CMakeLists.txt  attention.cpp
xllm/core/platform/: CMakeLists.txt  device.cpp  stream_helper.cpp  stream_helper.h
xllm/core/runtime/: CMakeLists.txt  llm_master.cpp  llm_worker_impl.cpp  params_utils.cpp  speculative_worker_impl.cpp  worker_impl.cpp  worker_impl.h
xllm/core/scheduler/: CMakeLists.txt  continuous_scheduler.cpp  disagg_pd_scheduler.cpp
xllm/core/scheduler/profile/: profile_manager.cpp
xllm/core/util/: device_name_utils.cpp  scope_guard.h  threadpool.cpp  type_traits.h
xllm/models/: models.h
xllm/models/llm/: llm_model_base.h  qwen2_ilu.h  qwen_base.h
xllm/processors/: CMakeLists.txt
